<resources>

    <string name="app_name">Move</string>

    <!--REGISTRO STRINGS -->
    <string name="txtRegisterTitle">Registro</string> <!-- STRING TITULO -->
    <string name="txtName">Nombre</string>
    <string name="txtRegisterEmail">Email</string>
    <string name="txtRegisterPassword">Contraseña</string>
    <string name="txtPasswordConfirmation">Confirmar contraseña</string>
    <string name="txtRegisterButton">Registrarse</string>
    <string name="txtAlredyRegistered">Ya estoy registrado</string>
    <string name="txtProgressDialogTitle">Registrando</string>
    <string name="txtProgressDialogMessage">Por favor espere...</string>

    <!--MENU STRINGS -->
    <string name="title_activity_side_bar">sideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- LOGIN STRINGS -->
    <string name="txtLoginEmail">Correo</string>
    <string name="txtLoginPassword">Contraseña</string>
    <string name="txtLoginButton">Login</string>
    <string name="txtRegisterAccount">¿No tienes una cuenta? Registrate acá</string>
    <string name="txtForgotPassword">Olvidé mi contraseña</string>
    <string name="txtOtherLoginWays">Iniciar sesión con</string>

    <!-- RESET PASSWORD STRINGS -->
    <string name="txtResetTitle">Reestablecer mi contraseña</string>
    <string name="txtResetInstructions">Ingrese su correo electrónico</string>
    <string name="txtResetEmail">Correo</string>
    <string name="txtResetPasswordbtn">Reestablecer</string>


    <!-- PHONE NUMBER LOGIN STRINGS -->
    <string name="txtPhoneInstructions">Le enviaremos un código de verificación al número de telefono especificado</string>
    <string name="phonenumberinstruction">Ingrese su número de teléfono</string>
    <string name="txtAreaCode">+506</string>
    <string name="txt_phonenumber">Ingrese su número de teléfono</string>
    <string name="btnGenerateOTP">Verificar mi número</string>
    <string name="txtOTPVerification">Ingrese su código de verificación</string>
    <string name="txt_OTP">Código de verificación</string>
    <string name="btnVerifyOTP">Verificar código</string>
    <string name="txtOTPInstructions">Revise su aplicación de mensajes, en breve te enviaremos el código de verificación</string>
    <string name="txtResendOTP">No tienes un código? Pulsa acá para solicitar uno nuevo</string>
    <string name="txtVerificationError">Lo sentimos, no ha sido posible verificar tu número</string>
    <string name="txtConnectionError">Lo sentimos, no ha sido posible conectarse al servidor</string>
    <string name="txtCodeSent">El código ha sido enviado</string>

    <!-- FACEBOOK STRINGS -->
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


    <!-- TOAST STRINGS -->
    <string name="toastUnsuccess">Lo sentimos, no hemos podido realizar esta operación</string>
    <string name="toastSuccess">La operación se completó con éxito</string>
    <string name="toastEmailSend">Se han enviado las instrucciones de reestablecimiento, revisa tu correo</string>
    <string name="toastErrorOnReset">Lo sentimos, no hemos podido realizar esta operación</string>
    <string name="toastWrongCodeInput">El código ingresado es incorrecto</string>

    <!-- PROGRESS DIALOG STRINGS -->
    <string name="loginProgressDialogTitle">Verificando credenciales, por favor espere...</string>
    <string name="loginProgressDialogText">Por favor espere...</string>
    <string name="txtProgressDialog">Verificando credenciales, por favor espere...</string>


    <!-- INPUT ERRORS STRINGS -->
    <string name="txtWrongEmailInput">Ingrese un correo eléctronico válido</string>
    <string name="txtWrongPasswordInput">Ingrese una contraseña de al menos 6 caracteres</string>
    <string name="txtWrongOTPInput">Ingresa un número de telefono válido</string>
    <string name="txtWrongConfirmationInput">Las contraseñas no coinciden</string>

    <!-- EDITABLE STRINGS -->
    <string name="txtEditableUserEmail"></string>


</resources>