<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resetPasswordInstruction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.archivo.MainMenu.Login_RegisterActivity.ResetPasswordActivity">


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/field"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txtResetEmail"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResetPasswordInstruction" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/bg_green"
        android:text="@string/txtResetPasswordbtn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/txtResetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/txtResetTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResetPasswordInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtResetInstructions"
        app:layout_constraintEnd_toEndOf="@+id/txtResetPasswordTitle"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="@+id/txtResetPasswordTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtResetPasswordTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>