<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.archivo.MainMenu.Login_RegisterActivity.PhoneLoginActivity">

    <ImageView
        android:id="@+id/imgMessage"
        android:layout_width="174dp"
        android:layout_height="204dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_message" />

    <TextView
        android:id="@+id/txtPhoneNumberInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phonenumberinstruction"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgMessage"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/imgMessage"
        app:layout_constraintTop_toBottomOf="@+id/imgMessage" />

    <TextView
        android:id="@+id/txtInstructions"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtPhoneInstructions"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/txtPhoneNumberInstruction"
        app:layout_constraintStart_toStartOf="@+id/txtPhoneNumberInstruction"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumberInstruction" />

    <Button
        android:id="@+id/btnGenerateOTP"
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_gray"
        android:text="@string/btnGenerateOTP"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.564" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="286dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/field"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstructions">

        <TextView
            android:id="@+id/txtAreaCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_costaricaflag"
            android:drawablePadding="5dp"
            android:paddingLeft="20dp"
            android:text="@string/txtAreaCode"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>