<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.archivo.MainMenu.Login_RegisterActivity.RegisterActivity"
    android:background="@color/white">


        <EditText
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle" />

        <EditText
            android:id="@+id/txtNewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/field"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtRegisterEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtName"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <EditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/field"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtRegisterPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtNewEmail"
            app:layout_constraintStart_toStartOf="@+id/txtNewEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtNewEmail" />

        <EditText
            android:id="@+id/txtPasswordConfirmation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/field"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtRegisterButton"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtRegisterPassword"
            app:layout_constraintStart_toStartOf="@+id/txtRegisterPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

        <Button
            android:id="@+id/btnRegisterAccount"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/bg_green"
            android:text="@string/txtRegisterButton"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtPasswordConfirmation"
            app:layout_constraintStart_toStartOf="@+id/txtPasswordConfirmation"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfirmation" />

        <TextView
            android:id="@+id/txtRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegisterTitle"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.068" />

        <TextView
            android:id="@+id/txtExistingAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/txtAlredyRegistered"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/btnRegisterAccount"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="@+id/btnRegisterAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnRegisterAccount"
            tools:ignore="UsingOnClickInXml" /> <!-- LLAMA AL MÉTODO SI ES PRESIONADO -->


</androidx.constraintlayout.widget.ConstraintLayout>