<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.archivo.MainMenu.Login_RegisterActivity.LoginActivity"
    android:background="@color/white">


        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="344dp"
            android:layout_height="158dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_applogo" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/field"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtLoginPassword"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/txtEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:onClick="resetPassword"
            android:text="@string/txtForgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="261dp"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_green"
            android:text="@string/txtLoginButton"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
            tools:ignore="UsingOnClickInXml" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/field"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtLoginEmail"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/imgAppLogo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imgAppLogo"
            app:layout_constraintTop_toBottomOf="@+id/imgAppLogo" />

        <TextView
            android:id="@+id/txtNewAccount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/txtRegisterAccount"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <ImageView
            android:id="@+id/imgGuestLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="352dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_x_black" />

        <TextView
            android:id="@+id/txtOtherLoginWays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/txtOtherLoginWays"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/txtNewAccount"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtNewAccount"
            app:layout_constraintTop_toBottomOf="@+id/txtNewAccount" />

        <ImageView
            android:id="@+id/btnGoogleLogin"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/txtOtherLoginWays"
            app:layout_constraintTop_toBottomOf="@+id/txtOtherLoginWays"
            app:srcCompat="@drawable/img_google" />

        <ImageView
            android:id="@+id/btnFacebookLogin"
            android:layout_width="52dp"
            android:layout_height="51dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toEndOf="@+id/btnGoogleLogin"
            app:layout_constraintTop_toBottomOf="@+id/txtOtherLoginWays"
            app:srcCompat="@drawable/img_facebook" />

        <ImageView
            android:id="@+id/btnPhoneLogin"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/txtOtherLoginWays"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnFacebookLogin"
            app:layout_constraintTop_toBottomOf="@+id/txtOtherLoginWays"
            app:srcCompat="@drawable/img_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>